Test against scr-axum-cranker-router.